<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_add">Add</string>
    <string name="flat">Flat</string>
    <string name="house">House</string>
    <string name="duplex">Duplex</string>
    <string name="loft">Loft</string>
    <string name="manor">Manor</string>
    <string name="land">Land</string>
    <string name="to_sale">To sale</string>
    <string name="sold">Sold</string>
    <string name="status">Status</string>
    <string name="location">Location</string>
    <string name="describe">Describe</string>
    <string name="rooms">Rooms</string>
    <string name="surface">Surface Area (m²)</string>
    <string name="price">Price ($)</string>
    <string name="number">Number</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="postalCode">Postal Code</string>
    <string name="takepic">Picture</string>
    <string name="fromgallery">Gallery</string>
    <string name="descmap">Position on map</string>
    <string name="action_edit">Edit</string>
    <string name="minPrice">Min price</string>
    <string name="maxPrice">Max price</string>
    <string name="minSurface">Min surface</string>
    <string name="maxSurface">Max surface</string>
    <string name="minRooms">Min rooms</string>
    <string name="maxRooms">Max rooms</string>
    <string name="action_search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="school">School</string>
    <string name="market">Market</string>
    <string name="park">Park</string>
    <string name="restaurant">Restaurant</string>
    <string name="health">Health</string>
    <string name="transports">Transports</string>
    <string name="pointsInterest">Point of interest</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="sellSince">Sell since</string>
    <string name="to">to</string>
    <string name="soldSince">Sold since</string>
    <string name="noNetwork">Activate your internet connection to display the information on the map</string>
    <string name="agentName">Agent name</string>
    <string name="simulator">Simulator</string>
    <string name="deposit">Deposit</string>
    <string name="years">Years</string>
    <string name="rate">Rate</string>
    <string name="calculate">Calculate</string>
    <string name="valByMonth">Price by month</string>
    <string name="totalPrice">Total price</string>
    <string name="ratePrice">Rate price</string>
    <string name="toSell">To Sell</string>
    <string name="date_sold">Date sold</string>
    <string name="date_sell">Date sell</string>
    <string name="address">Address</string>
    <string name="addProperty">Property added</string>
    <string name="descAdd">A property just added</string>
</resources>