<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_list">

    <fragment
        android:id="@+id/nav_list"
        android:name="com.openclassrooms.realestatemanager.ui.listProperties.ListPropertiesFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list_properties" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.openclassrooms.realestatemanager.ui.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.openclassrooms.realestatemanager.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>